fix(ac-input-base): Changes the alignment of the floating label
Closes #1.

--- a/src/components/atoms/ac-input-base/ac-input-base.scss
+++ b/src/components/atoms/ac-input-base/ac-input-base.scss
@@ -30,7 +30,7 @@
 
     label.ac-input__label {
       position: absolute;
-      top: 18px;
+      top: 15px;
       left: 16px;
       color: $gray;
       transition: font-size $default-transition, top $default-transition;
